fix: change header z-index to 1 to prevent video controls overlapping it

--- a/src/features/Header/Header.css
+++ b/src/features/Header/Header.css
@@ -7,6 +7,7 @@ header {
   padding: 0 var(--spacing-3);
   position: sticky;
   top: 0px;
+  z-index: 1;
   grid-column: 1/-1;
 }
 
